[gd_scene load_steps=9 format=3 uid="uid://d1vsurut7qbuo"]

[ext_resource type="Script" path="res://weapons/enemy_weapons/impball.gd" id="1_ympsl"]
[ext_resource type="Texture2D" uid="uid://k71code5nvau" path="res://PNGs/3Weapons/BAL1C0.png" id="2_36t4x"]
[ext_resource type="Texture2D" uid="uid://hfec1yliyum1" path="res://PNGs/3Weapons/BAL1D0.png" id="3_jpaha"]
[ext_resource type="Texture2D" uid="uid://ccuxkqkhymb0c" path="res://PNGs/3Weapons/BAL1E0.png" id="4_1k8qj"]
[ext_resource type="Texture2D" uid="uid://chpd6csq7vhgx" path="res://PNGs/3Weapons/BAL1A0.png" id="5_hsak3"]
[ext_resource type="Texture2D" uid="uid://xpfx5w2prlg2" path="res://PNGs/3Weapons/BAL1B0.png" id="6_rvs8x"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dyhud"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_36t4x")
}, {
"duration": 1.0,
"texture": ExtResource("3_jpaha")
}, {
"duration": 1.0,
"texture": ExtResource("4_1k8qj")
}],
"loop": false,
"name": &"blow",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_hsak3")
}, {
"duration": 1.0,
"texture": ExtResource("6_rvs8x")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4kjxw"]
radius = 24.0208

[node name="Fireball" type="Area2D"]
show_behind_parent = true
top_level = true
rotation = -5.95017
collision_mask = 5
script = ExtResource("1_ympsl")

[node name="AnimatedBall" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0.326894, 0.195405)
scale = Vector2(1.29038, 1.29008)
sprite_frames = SubResource("SpriteFrames_dyhud")
animation = &"blow"

[node name="ImpballCollision" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
light_mask = 7
visibility_layer = 7
position = Vector2(5.68434e-14, -2.13163e-14)
rotation = 1.22173
shape = SubResource("CircleShape2D_4kjxw")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedBall" to="." method="_on_animation_finished"]
